--- a/src/app/components/start-menu/start-menu.component.html
+++ b/src/app/components/start-menu/start-menu.component.html
@@ -2,15 +2,15 @@
 <div class="row text-center">
     <h2>Tu Empleado Perfecto</h2>
 </div>
-<div class="row">
+<div class="row mb-3">
     <div class="col">
         <div class="row">
-            <button type="button" class="btn btn-primary" (click)="loadListOfCompanys(item)">Lista Empresas</button>
+            <button type="button" class="btn btn-primary" (click)="goToHome()">Mis Empresas</button>
         </div>
     </div>
     <div class="col">
         <div class="row">
-            <p>menu principal</p>
+            <button type="button" class="btn btn-primary" (click)="goToHome()">Mis Empleados</button>
         </div>
     </div>
     <div class="col">
@@ -21,3 +21,5 @@
 </div>
 
 
+
+            <!-- (click)="loadListOfCompanys(item)" -->
