sp: security checkpoint

--- a/src/app/components/employees-list-by-cid/employees-list-by-cid.component.html
+++ b/src/app/components/employees-list-by-cid/employees-list-by-cid.component.html
@@ -4,6 +4,11 @@
     <label>Dirección: {{ company.address }}</label>
     <label>Teléfono: {{ company.phone }}</label>
 </div>
+<div class="row mb-3">
+    <div class="col">
+        <button type="button" name="" id="" class="btn btn-primary" (click)="goToFormEmployee()">Agregar Empleado</button>
+    </div>
+</div>
 <div class="row border border-rounded text-center p-1">
     <div class="col">
         <label>rut</label>
