--- a/src/app/components/company-create-form/company-create-form.component.html
+++ b/src/app/components/company-create-form/company-create-form.component.html
@@ -4,11 +4,33 @@
         <div class="card-header">
             <h3 class="card-title">Formulario de creación de Empresa</h3>
         </div>
-        <form class="card-body" [formGroup]="form" (ngSubmit)="onSubmit(form)">
+        <form class="card-body" [formGroup]="formCompany" (ngSubmit)="onSubmit(formCompany)">
             <div class="row mb-2">
-                <div class="col-md-1">Nombre: </div>
-                <div class="col-md-11"><input class="form-control" type="text" name="" id=""></div>
+                <div class="col-md-2">Rut: </div>
+                <div class="col-md-10"><input class="form-control" type="text" formControlName="rut"></div>
+                <div *ngIf="formCompany.get('rut')?.touched && formCompany.get('rut')?.errors?.['required']" class="error_alert">Debes ingresar este campo</div>
             </div>
+            <div class="row mb-2">
+                <div class="col-md-2">Nombre: </div>
+                <div class="col-md-10"><input class="form-control" type="text" formControlName="name"></div>
+                <div *ngIf="formCompany.get('name')?.touched && formCompany.get('name')?.errors?.['required']" class="error_alert">Debes ingresar este campo</div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-md-2">Dirección: </div>
+                <div class="col-md-10"><input class="form-control" type="text" formControlName="address"></div>
+                <div *ngIf="formCompany.get('address')?.touched && formCompany.get('address')?.errors?.['required']" class="error_alert">Debes ingresar este campo</div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-md-2">Teléfono: </div>
+                <div class="col-md-10"><input class="form-control" type="text" formControlName="phone"></div>
+                <div *ngIf="formCompany.get('phone')?.touched && formCompany.get('phone')?.errors?.['required']" class="error_alert">Debes ingresar este campo</div>
+
+            </div>
+            <div class="row mb-2 text-center">
+              <div class="col-md-2 ">
+                <button class="btn btn-primary" type="submit" >Agregar Empresa</button>
+              </div>
+          </div>
         </form>
     </div>
   </div>
