--- a/src/app/components/employees-list-by-cid/employees-list-by-cid.component.html
+++ b/src/app/components/employees-list-by-cid/employees-list-by-cid.component.html
@@ -11,13 +11,13 @@
 </div>
 <div class="row border border-rounded text-center p-1">
     <div class="col">
-        <label>rut</label>
+        <label>Rut:</label>
     </div>
     <div class="col">
-        <label>Nombre</label>
+        <label>Nombre:</label>
     </div>
     <div class="col">
-        <label>email:</label>
+        <label>Email:</label>
     </div>
 </div>
 <div *ngFor="let employee of employeesList">
