--- a/src/app/components/start-menu/start-menu.component.html
+++ b/src/app/components/start-menu/start-menu.component.html
@@ -3,12 +3,12 @@
     <h2>Tu Empleado Perfecto</h2>
 </div>
 <div class="row mb-3">
-    <div class="col">
+    <div class="col-md-3">
         <div class="row">
             <button type="button" class="btn btn-primary" (click)="goToHome()">Mis Empresas</button>
         </div>
     </div>
-    <div class="col">
+    <!-- <div class="col">
         <div class="row">
             <button type="button" class="btn btn-primary" (click)="goToHome()">Mis Empleados</button>
         </div>
@@ -17,9 +17,6 @@
         <div class="row">
             <p>menu principal</p>
         </div>
-    </div>
+    </div> -->
 </div>
 
-
-
-            <!-- (click)="loadListOfCompanys(item)" -->
