--- a/src/app/components/company-list/company-list.component.html
+++ b/src/app/components/company-list/company-list.component.html
@@ -37,7 +37,7 @@
         <div class="col">
             <div class="row">
                 <div class="col"><button type="button" class="btn btn-primary" (click)="navigateTo(company.id)">Mis Empleados</button></div>
-                <div class="col"><button type="button" class="btn btn-danger">Eliminar</button></div>
+                <div class="col"><button type="button" class="btn btn-danger" (click)="deleteCompany(company.id)">Eliminar</button></div>
             </div>
         </div>
     </div>
