--- a/src/app/components/employees-list-by-cid/employees-list-by-cid.component.html
+++ b/src/app/components/employees-list-by-cid/employees-list-by-cid.component.html
@@ -5,8 +5,11 @@
     <label>Teléfono: {{ company.phone }}</label>
 </div>
 <div class="row mb-3">
-    <div class="col">
+    <div class="col-md-3">
         <button type="button" name="" id="" class="btn btn-primary" (click)="goToFormEmployee()">Agregar Empleado</button>
+    </div>
+    <div class="offset-md-6 col-md-3">
+        <button type="button" name="" id="" class="btn btn-primary" (click)="goToHome()">Volver</button>
     </div>
 </div>
 <div class="row border border-rounded text-center p-1">
@@ -19,6 +22,9 @@
     <div class="col">
         <label>Email:</label>
     </div>
+    <div class="col">
+        <label>Accion:</label>
+    </div>
 </div>
 <div *ngFor="let employee of employeesList">
     <div class="row border rounded text-center p-1">
@@ -30,6 +36,9 @@
         </div>
         <div class="col">
            <label>{{employee.email}}</label>
+        </div>
+        <div class="col">
+            <div class="col"><button type="button" class="btn btn-danger" (click)="deleteEmployee(employee.id)">Eliminar</button></div>
         </div>
     </div>
 </div>
