--- a/src/app/components/employees-create-form/employees-create-form.component.html
+++ b/src/app/components/employees-create-form/employees-create-form.component.html
@@ -7,22 +7,31 @@
           <form class="card-body" [formGroup]="formEmployee" (ngSubmit)="onSubmit(formEmployee)">
               <div class="row mb-2">
                   <div class="col-md-2">Rut: </div>
-                  <div class="col-md-10"><input class="form-control" type="text" formControlName="rutEmployee"></div>
-                  <div *ngIf="formEmployee.get('rutEmployee')?.touched && formEmployee.get('rutEmployee')?.errors?.['required']" class="error_alert">Debes ingresar este campo</div>
+                  <div class="col-md-10">
+                    <input class="form-control" type="text" formControlName="rutEmployee">
+                    <div *ngIf="formEmployee.get('rutEmployee')?.touched && formEmployee.get('rutEmployee')?.errors?.['required']" class="error_alert">Debes ingresar este campo.</div>
+                  </div>
               </div>
               <div class="row mb-2">
                   <div class="col-md-2">Nombre Completo: </div>
-                  <div class="col-md-10"><input class="form-control" type="text" formControlName="fullName"></div>
-                  <div *ngIf="formEmployee.get('fullName')?.touched && formEmployee.get('fullName')?.errors?.['required']" class="error_alert">Debes ingresar este campo</div>
+                  <div class="col-md-10">
+                    <input class="form-control" type="text" formControlName="fullName">
+                    <div *ngIf="formEmployee.get('fullName')?.touched && formEmployee.get('fullName')?.errors?.['required']" class="error_alert">Debes ingresar este campo.</div>
+                  </div>
               </div>
               <div class="row mb-2">
                   <div class="col-md-2">Email: </div>
-                  <div class="col-md-10"><input class="form-control" type="text" formControlName="email"></div>
-                  <div *ngIf="formEmployee.get('email')?.touched && formEmployee.get('email')?.errors?.['required']" class="error_alert">Debes ingresar este campo</div>
+                  <div class="col-md-10">
+                    <input class="form-control" type="text" formControlName="email">
+                    <div *ngIf="formEmployee.get('email')?.touched && formEmployee.get('email')?.errors?.['required']" class="error_alert">Debes ingresar este campo.</div>
+                  </div>
               </div>
-              <div class="row mb-2 text-center">
-                <div class="col-md-2 ">
+              <div class="row mb-2">
+                <div class="col-md-2">
                   <button class="btn btn-primary" type="submit" >Agregar Empleado</button>
+                </div>
+                <div class="col-md-2">
+                  <button class="btn btn-danger" (click)="goEmployeesList()">Cancelar</button>
                 </div>
             </div>
           </form>
